syntax = "proto3";

package storage;

enum StatusCode {
    OK = 0;
    INVALID_ARGUMENT = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
    VERSION_MISMATCH = 4;
    VERSION_MUST_BE_0 = 5;
}

message Status {
    StatusCode code = 1;
    string message = 2;
}

message PutRequest {
    uint64 version = 1;
    bytes key = 2;
    bytes value = 3;
}

message PutResponse {
    uint64 version = 1;
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    uint64 version = 1;
    bytes value = 2;
}

message DeleteRequest {
    bytes key = 1;
    uint64 version = 2;
}

message DeleteResponse { }

service Storage {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}